# meta-magic_mount-rs

./: .gitignore  Cargo.toml  build.rs  cliff.toml  clippy.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/bot/: bot.py  requirements.txt
.github/workflows/: ci.yml  license_header.yml  lints.yml  release.yml
docs/: README.md  README_en.md  README_ru.md
module/: config.toml  config_apatch.toml  customize.sh  emulated-soft-reboot.sh  metainstall.sh  metamount.sh  metauninstall.sh  uninstall.sh
src/: bind_mount.rs  config.rs  defs.rs  main.rs  misc.rs  scanner.rs
src/magic_mount/: mod.rs  node.rs  utils.rs
src/parser/: mod.rs
src/utils/: ksucalls.rs  mod.rs
update/: changelog.md  update.json
webui/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  tsconfig.json  vite.config.ts
webui/src/: App.tsx  app.css  global.d.ts  init.ts  layout.css  main.tsx  material-web.d.ts  types.ts
webui/src/components/: BottomActions.css  BottomActions.tsx  ChipInput.css  ChipInput.tsx  MagicLogo.css  MagicLogo.tsx  NavBar.css  NavBar.tsx  Skeleton.css  Skeleton.tsx  Toast.css  Toast.tsx  TopBar.css  TopBar.tsx
webui/src/lib/: api.mock.ts  api.ts  constants.ts  i18n.ts
webui/src/lib/stores/: configStore.ts  moduleStore.ts  sysStore.ts  uiStore.ts
webui/src/locales/: en.json  ja.json  lzh.json  nekozh.json  ru.json  ua.json  zh-hant.json  zh.json
webui/src/routes/: ConfigTab.css  ConfigTab.tsx  InfoTab.css  InfoTab.tsx  ModulesTab.css  ModulesTab.tsx  StatusTab.css  StatusTab.tsx
xtask/: Cargo.toml
xtask/src/: main.rs  zip_ext.rs
