# Copyright (C) 2026 Tools-cx-app <localhost.hutao@gmail.com>
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.

[workspace]
members = ["xtask"]

[package]
name = "magic_mount_rs"
version = "3.1.2"
edition = "2024"
description = "An implementation of a metamodule using Magic Mount, Based on MKSU, Template is from meta-overlay."
authors = ["mmrs developers"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/Tools-cx-app/meta-magic_mount-rs/"

[package.metadata.magic_mount_rs]
name = "Magic Mount-rs"
update = "https://github.com/Tools-cx-app/meta-magic_mount-rs/raw/master/update/update.json"

[dependencies]
anyhow = "1"
extattr = "1"
log = "0.4"
rustix = { version = "1.1", features = ["fs", "mount"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
mimalloc = { version = "0.1.48", features = ["no_thp", "override"] }
regex-lite = "0.1.9"
fastrand = "2.4.1"
tempfile = "3.27.0"
java-properties = "2.0.0"
encoding_rs = "0.8.35"
glob = "0.3.3"

[build-dependencies]
anyhow = "1.0.102"
toml = "1.1.2"
serde_json = "1.0.148"
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
ksu = { git = "https://github.com/Tools-cx-app/ksu.git", version = "0.2.0" }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11.10"
